# vlc-meta-reader

./: CMakeLists.txt  README.md
CMakeModules/: FindLIBVLC.cmake
src/: CMakeLists.txt  config.h.in  main.cpp
